# dio_agent_core

./: .bedrock_agentcore.yaml  README.md  main.py  pyproject.toml
.bedrock_agentcore/agent_deployment_meu_agente/: Dockerfile
agent_deployment/: meu_agente.py  pyproject.toml
